--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
-    "prisma": "prisma"
+    "seed": "node prisma/seed.js"
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.0.15",
